--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
     <link rel="stylesheet" href="global.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container" style="text-align: center">
-        <nav class="navbar">
-          <ul>
+        <nav class="navbar navbar-expand">
+          <ul class="navbar-nav navbar-text">
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="products.html" class="nav-link">Products</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
@@ -22,19 +28,39 @@
       <div class="container">
         <h1 style="text-align: center; margin-top: 2rem">Contact Us</h1>
         <form class="form">
-          <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required />
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Name</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="John Doe"
+            />
           </div>
-          <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Email address</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="name@example.com"
+            />
           </div>
-          <div>
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Example textarea</label
+            >
+            <textarea
+              class="form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
           </div>
-          <button type="submit" class="btn-primary">Send Message</button>
+          <button class="btn btn-primary" type="submit">Submit</button>
         </form>
       </div>
     </main>
@@ -43,5 +69,10 @@
         <p>by Nurzat Samatov SE-2319</p>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
