--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
     <link rel="stylesheet" href="global.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header class="header">
       <div class="container" style="text-align: center">
-        <nav class="navbar">
-          <ul>
+        <nav class="navbar navbar-expand">
+          <ul class="navbar-nav navbar-text">
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="products.html" class="nav-link">Products</a></li>
             <li><a href="contact.html" class="nav-link">Contact</a></li>
@@ -23,22 +29,36 @@
         <div class="hero-text">
           <h1>Welcome to the Best Online Store</h1>
           <p>Find the latest and greatest products at unbeatable prices!</p>
-          <a href="products.html" class="btn-primary">Shop Now</a>
+          <a href="products.html" class="btn btn-primary">Shop Now</a>
         </div>
       </section>
-      <section class="featured-products">
+      <section>
         <div class="container">
-          <h2>Featured Products</h2>
-          <div class="product-grid">
-            <div class="product-item">
-              <img src="test-image.jpg" alt="Product 1" />
+          <h2 class="mt-3">Featured Products</h2>
+          <div class="mt-3 row g-3">
+            <div class="product-item col-lg-3 mx-2">
+              <img src="test-image.jpg" class="w-50" alt="Product 1" />
               <h3>Product 1</h3>
               <p>$29.99</p>
+              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
+                >View Details</a
+              >
             </div>
-            <div class="product-item">
-              <img src="test-image.jpg" alt="Product 2" />
+            <div class="product-item col-lg-3 mx-2">
+              <img class="w-50" src="test-image.jpg" alt="Product 2" />
               <h3>Product 2</h3>
-              <p>$39.99</p>
+              <p>$12.85</p>
+              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
+                >View Details</a
+              >
+            </div>
+            <div class="product-item col-lg-3 mx-2">
+              <img class="w-50" src="test-image.jpg" alt="Product 3" />
+              <h3>Product 3</h3>
+              <p>$29.99</p>
+              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
+                >View Details</a
+              >
             </div>
           </div>
         </div>
@@ -49,5 +69,10 @@
         <p>by Nurzat Samatov SE-2319</p>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
