--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -35,31 +40,50 @@
       <section>
         <div class="container">
           <h2 class="mt-3">Featured Products</h2>
-          <div class="mt-3 row g-3">
-            <div class="product-item col-lg-3 mx-2">
-              <img src="test-image.jpg" class="w-50" alt="Product 1" />
-              <h3>Product 1</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
+          <div id="carousel" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="carousel.jpg" class="d-block rounded w-100" alt="1" />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="carousel2.jpg"
+                  class="rounded d-block w-100"
+                  alt="2"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="carousel3.jpg"
+                  class="d-block rounded w-100"
+                  alt="3"
+                />
+              </div>
             </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 2" />
-              <h3>Product 2</h3>
-              <p>$12.85</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 3" />
-              <h3>Product 3</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carousel"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carousel"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
       </section>
@@ -69,10 +93,6 @@
         <p>by Nurzat Samatov SE-2319</p>
       </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script defer scr="script.js"></script>
   </body>
 </html>
