--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               data-bs-slide="prev"
             >
               <span
-                class="carousel-control-prev-icon"
+                class="carousel-control-prev-icon bg-dark rounded-circle"
                 aria-hidden="true"
               ></span>
               <span class="visually-hidden">Previous</span>
@@ -79,7 +79,7 @@
               data-bs-slide="next"
             >
               <span
-                class="carousel-control-next-icon"
+                class="carousel-control-next-icon bg-dark rounded-circle"
                 aria-hidden="true"
               ></span>
               <span class="visually-hidden">Next</span>
