--- a/index.html
+++ b/index.html
@@ -1,98 +1,72 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome</title>
-    <link rel="stylesheet" href="global.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header class="header">
-      <div class="container" style="text-align: center">
-        <nav class="navbar navbar-expand">
-          <ul class="navbar-nav navbar-text">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="products.html" class="nav-link">Products</a></li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
-          </ul>
-        </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="global.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+  <title>Welcome</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="container" style="text-align: center">
+      <nav class="navbar navbar-expand">
+        <ul class="navbar-nav navbar-text">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="products.html" class="nav-link">Products</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Welcome to the Best Online Store</h1>
+        <p>Find the latest and greatest products at unbeatable prices!</p>
+        <a href="products.html" class="btn px-5 btn-primary">Shop Now</a>
       </div>
-    </header>
-    <main>
-      <section class="hero">
-        <div class="hero-text">
-          <h1>Welcome to the Best Online Store</h1>
-          <p>Find the latest and greatest products at unbeatable prices!</p>
-          <a href="products.html" class="btn btn-primary">Shop Now</a>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <h2 class="mt-3">Featured Products</h2>
-          <div id="carousel" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="carousel.jpg" class="d-block rounded w-100" alt="1" />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="carousel2.jpg"
-                  class="rounded d-block w-100"
-                  alt="2"
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="carousel3.jpg"
-                  class="d-block rounded w-100"
-                  alt="3"
-                />
-              </div>
-            </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carousel"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon bg-dark rounded-circle"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carousel"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon bg-dark rounded-circle"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
+    </section>
+    <section>
       <div class="container">
-        <p>by Nurzat Samatov SE-2319</p>
+        <h2 class="mt-3">Featured Products</h2>
+        <div id="carousel" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="carousel.jpg" class="d-block rounded w-100" alt="1" />
+            </div>
+            <div class="carousel-item">
+              <img src="carousel2.jpg" class="rounded d-block w-100" alt="2" />
+            </div>
+            <div class="carousel-item">
+              <img src="carousel3.jpg" class="d-block rounded w-100" alt="3" />
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon bg-dark rounded-circle" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon bg-dark rounded-circle" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
-    </footer>
-    <script defer scr="script.js"></script>
-  </body>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <p>by Nurzat Samatov SE-2319</p>
+    </div>
+  </footer>
+  <script defer scr="script.js"></script>
+</body>
+
 </html>
