--- a/products.html
+++ b/products.html
@@ -1,95 +1,80 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
-    <link rel="stylesheet" href="global.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <header class="header">
-      <div class="container" style="text-align: center">
-        <nav class="navbar navbar-expand">
-          <ul class="navbar-nav navbar-text">
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="products.html" class="nav-link">Products</a></li>
-            <li><a href="contact.html" class="nav-link">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <section class="product-list">
-        <div class="container">
-          <h1 style="text-align: center; margin-top: 2rem">Our Products</h1>
-          <div class="mt-3 row g-3 justify-content-center">
-            <div class="product-item col-lg-3 mx-2">
-              <img src="test-image.jpg" class="w-50" alt="Product 1" />
-              <h3>Product 1</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 2" />
-              <h3>Product 2</h3>
-              <p>$12.85</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 3" />
-              <h3>Product 3</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 4" />
-              <h3>Product 4</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 5" />
-              <h3>Product 5</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
-            <div class="product-item col-lg-3 mx-2">
-              <img class="w-50" src="test-image.jpg" alt="Product 6" />
-              <h3>Product 6</h3>
-              <p>$29.99</p>
-              <a href="#" class="btn btn-dark rounded-pill px-3 py-2"
-                >View Details</a
-              >
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Products</title>
+  <link rel="stylesheet" href="global.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header class="header">
+    <div class="container" style="text-align: center">
+      <nav class="navbar navbar-expand-sm">
+        <ul class="navbar-nav navbar-text">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="products.html" class="nav-link">Products</a></li>
+          <li><a href="contact.html" class="nav-link">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="product-list">
+      <div class="container">
+        <h1 style="text-align: center; margin-top: 2rem">Our Products</h1>
+        <div class="mt-3 row g-3 justify-content-center">
+          <div class="product-item col-lg-6 ">
+            <img src="test-image.jpg" class="w-50" alt="Product 1" />
+            <h3>Product 1</h3>
+            <p>$29.99</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
+          </div>
+          <div class="product-item col-lg-6 ">
+            <img class="w-50" src="test-image.jpg" alt="Product 2" />
+            <h3>Product 2</h3>
+            <p>$12.85</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
+          </div>
+          <div class="product-item col-lg-6 ">
+            <img class="w-50" src="test-image.jpg" alt="Product 3" />
+            <h3>Product 3</h3>
+            <p>$29.99</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
+          </div>
+          <div class="product-item col-lg-6 ">
+            <img class="w-50" src="test-image.jpg" alt="Product 4" />
+            <h3>Product 4</h3>
+            <p>$29.99</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
+          </div>
+          <div class="product-item col-lg-6 ">
+            <img class="w-50" src="test-image.jpg" alt="Product 5" />
+            <h3>Product 5</h3>
+            <p>$29.99</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
+          </div>
+          <div class="product-item col-lg-6 ">
+            <img class="w-50" src="test-image.jpg" alt="Product 6" />
+            <h3>Product 6</h3>
+            <p>$29.99</p>
+            <a href="#" class="btn btn-dark rounded-pill px-3 py-2">View Details</a>
           </div>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <p>by Nurzat Samatov SE-2319</p>
       </div>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <p>by Nurzat Samatov SE-2319</p>
+    </div>
+  </footer>
+</body>
+
 </html>
