--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,10 @@
     </header>
     <main>
       <div class="container">
+        <div class="my-8">
+          <h2>Current Date and Time</h2>
+          <p id="dateTime"></p>
+        </div>
         <h1 style="text-align: center; margin-top: 2rem">Contact Us</h1>
         <form id="formElement">
           <div class="mb-3">
@@ -89,5 +93,6 @@
       </div>
     </footer>
     <script src="form-script.js"></script>
+    <script src="time.js"></script>
   </body>
 </html>
