--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,8 @@
             <span class="error text-danger"></span>
           </div>
           <button class="btn btn-primary" type="submit">Submit</button>
+          <!-- Reset Button  -->
+          <button class="btn btn-secondary" type="reset">Reset</button>
         </form>
       </div>
     </main>
